// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headroom should render correct if state is pinned, transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={false}
    top={0}
    transition={true}
    translateY={0}
  >
    <div
      className="Headroom__HeaderWrapper-bwshZw jvjlYC"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={100}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is static, no transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={true}
    top={-50}
    transition={false}
    translateY={0}
  >
    <div
      className="Headroom__HeaderWrapper-bwshZw bHQXko"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, no transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={false}
    top={0}
    transition={false}
    translateY={-50}
  >
    <div
      className="Headroom__HeaderWrapper-bwshZw gHairi"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={false}
    top={0}
    transition={true}
    translateY={-50}
  >
    <div
      className="Headroom__HeaderWrapper-bwshZw eftrUN"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render with no stickyAncestor supplied 1`] = `
<Fragment>
  <Headroom__HeaderWrapper
    static={true}
    top={-50}
    transition={false}
    translateY={0}
  >
    <MockNode />
  </Headroom__HeaderWrapper>
</Fragment>
`;

exports[`Headroom should render with values from its state 1`] = `
<Headroom
  height={100}
  pinStart={0}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    static={true}
    top={-50}
    transition={false}
    translateY={0}
  >
    <div
      className="Headroom__HeaderWrapper-bwshZw bHQXko"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;
